++++++++++++++++++++++++
OFSwitch13 release notes
++++++++++++++++++++++++

This file contains OFSwitch13 release notes (most recent releases first).

Release 3.1.0 (XXXXXXXXXXXXXXXXX)
=================================

- Improving the logical port example with a stateless tunnel application.

- Renaming OFSwitch13Device::GetNumberFlowEntries () to GetNFlowEntries ().

- Including the meter ID parameter on OFSwitch13Device::MeterDrop trace source.

- Adjust the size of queue interface to avoid dropping packets when we still
  have space on internal queues.

- Improving the way switches and controllers deals with TCP sockets from
  OpenFlow channels using the new OFSwitch13SocketHandler class.

- Updating the ofsoftswitch13 library to allow up to 65535 entries on each
  datapath table (flow, meter, and group).

- Updating the default TCAM delay attribute on switch device to better reflect
  real hardware operation.

- This version is compatible with ofsoftswitch13 library release v3.1.x and
  ns-3 version 3.26 (including patches). No backward compatibility with older
  ns-3 versions.


Release 3.0.0 (February 10, 2017)
=================================

- Starting using the Semantic Versioning (http://semver.org) on this project.
  So, BE AWARE THAT this release brings incompatible API changes in respect to
  prior OFSwitch13 versions.

- The OFSwitch13Queue was updated to match the changes introduced in the Queue
  API by ns-3.26. No more backward compatibility is available for ns-3.25 or
  prior versions.

- Including support for multiple controllers on the same OpenFlow network
  domain.

- Including support to build switch ports over VirtualNetDevices to work as
  logical ports.

- Renaming examples files to ofswitch13-*.cc and including the new
  ofswitch13-logical-port example.

- Removing the need of registering the switch at the controller before the
  connection start.

- Removing the controller address attribute from the OpenFlow device. It now