@@ -7,6 +7,10 @@ This file contains OFSwitch13 release notes (most recent releases first).
 Release 3.1.0 (XXXXXXXXXXXXXXXXX)
 =================================
 
+- Improving the OFSwitch13Device with the PipelineCapacity attribute that can
+  be used to limit the traffic throughput within the pipeline to a specific
+  data rate.
+
 - Improving the logical port example with a stateless tunnel application.
 
 - Renaming OFSwitch13Device::GetNumberFlowEntries () to GetNFlowEntries ().
